--- a/yaosi/yaosi01.html
+++ b/yaosi/yaosi01.html
@@ -29,7 +29,7 @@
 				<p align="center"><input type="search"name="kw" id="search_input" placeholder="(作者+空格+关键词)查询指定作者的结果" autocomplete="off" value=""></input><input type="submit"id="anniu_input"value="搜索"></p></section00>-->
 				<section01><img src="image\08.jpg"width="560px"height="213px"></section01>
 				<section02><img src="image\22.jpg"width="345x"height="315px"> </section02>
-				<section03> <video muted src="video/01.mp4"width="320px"height="315px"loop="-1"autoplay="autoplay" >您的浏览器不支持video标签</video>												</section03><br><br>
+				<section03> <video muted src="video/01.mp4"width="320px"height="315px"loop="-1"controls="controls">您的浏览器不支持video标签</video>												</section03><br><br>
 				
 				<section04><div id="bgroundcolor01">
 				<img id="img02"src="image\03.jpg"width="220px"height="180px"><hr><br><b>少年游</b><br>
@@ -87,7 +87,7 @@
 							故阳独老兮，忧思难忘。<br>
 							伊人妄兮曾格，阁中忘兮重得。<br>
 							祝酒回兮次方，无忧殇兮逍遥。<br></p>
-<br><hr></div></p><video muted src="video/05.mp4"width="300px"height="200px"controls="controls"loop="-1"autoplay="autoplay">您的浏览器不支持video标签</video> <embed src="music/03.mp3" autostart="true" loop="true" hidden="true"></embed>
+<br><hr></div></p><video muted src="video/05.mp4"width="300px"height="200px"controls="controls"loop="-1">您的浏览器不支持video标签</video> <embed src="music/03.mp3" autostart="true" loop="true" hidden="true"></embed>
 			</aside02>
 		
 	</main>
